<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Colors">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/text_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="36dp"
        android:gravity="center"
        android:background="@color/theme_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/colorCard1">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/colorCard1"
        android:layout_width="360dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/orange_20"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/text_h1"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold">
        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/colorCard2"
        android:layout_width="360dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/green_50"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/colorCard1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/text_h2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold">
        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/colorCard3"
        android:layout_width="360dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/blue_80"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/colorCard2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/text_h3"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold">
        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvColors"
        android:layout_width="360dp"
        android:layout_height="470dp"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/changeColorButton">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/changeColorButton"
        android:layout_width="wrap_content"
        android:text="@string/button_changeColor"
        android:layout_height="50dp"
        android:backgroundTint="@color/theme_purple"
        android:layout_marginTop="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>